# webpage-chatbot-builder

./: .dockerignore  .env.dev.example  .env.prod.example  .gitattributes  .gitignore  .python-version  Dockerfile  Dockerfile.celery  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/accounts/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  tasks_mock.py  urls.py  views.py
backend/accounts/deployment/: deploy.py  pull_package.sh  update_skeleton_code.sh
backend/accounts/migrations/: 0001_initial.py  0002_alter_uploadedfile_file_deployment.py  0003_deployment_status_alter_deployment_config_file_and_more.py  0004_deployment_chatbot_name.py  0005_deployment_config_file_name_and_more.py  0006_remove_deployment_config_file.py  0007_uploadedfile_file_name.py  0008_emaillog.py  0009_deployment_resource_name_alter_uploadedfile_file.py  0010_alter_deployment_status.py  0011_rename_config_file_name_deployment_config_file_path.py  0012_deployment_config_file_name.py  0013_uploadedfile_has_deployment.py  0014_deployment_config_file.py  0015_uploadedfile_chat_configuration_name.py
backend/accounts/templates/: base.html  deployments.html  library.html  upload.html
backend/accounts/views/: base_views.py  mock_outcomes.py  mock_views.py  prod_views.py
backend/settings/: base.py  development.py  production.py
backend/static/css/: style.css
backend/static/js/: statusCheck.js  (+1 more)
scripts/: _start.sh  run_dev.sh  start.sh
(+29 files in other folders)
